# maillearn

./: AUTHORS  Makefile.am  configure.ac  reconf
libs/featsel/: Makefile.am  commander.c  featsel.h  feattuple.c
libs/featsel/featsel/: feattuple.h  types.h
libs/featsel/headers/: datatypes.h
libs/featsel/tests/: Makefile.am  test00.c
libs/mbox/: Makefile.am  README  control.c  dataaccess.c  datatypes.h  descriptor.c  error.c  interface.c  mail.c  mail.h  mbox.h  parse.c  parse.h  split.c  stringhash.c  stringhash.h  strings.c  strings.h
libs/mbox/.deps/: mbox_access.Po  mbox_err.Po
libs/mbox/headers/: datatypes.h  mail.h  parse.h  split.h  strings.h
libs/mbox/mbox/: descriptor.h  error.h  mail.h  parse.h  types.h
libs/thread_queue/: Makefile.am  thrdqueue.c  thrdqueue.h
src/: Makefile.am  main.c
